--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -9,13 +9,19 @@
 
 .form-signin input[type="email"] {
   margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+  border-bottom-radius: 20px;
+
 }
 
 .form-signin input[type="password"] {
   margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  border-bottom-radius: 20px
 }
+
+h1{
+  text-transform: capitalize;
+  text-align: center;
+}
+
+
 
