--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,27 +1,46 @@
-<div class="d-flex align-items-center py-4 bg-body-tertiary h-100">
-  <main class="form-signin w-100 m-auto">
-    <form>
-      <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-      <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Email address</label>
-      </div>
-      <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">Password</label>
-      </div>
+  <div  class="d-flex align-items-center py-4 h-100 ">
+    <main class="form-signin w-100 m-auto">
+      <form>
+         <img class="img-thumbnail border border-danger" src="https://yt3.googleusercontent.com/ytc/AGIKgqNaBgEYQ4BbXbiLexvFHncZYVVGMl8aTMSW13ZD=s176-c-k-c0x00ffffff-no-rj" alt="" width="60" height="60" style="margin-left: 120px">
+        <h1 class="display-6">Welcome</h1>
 
-      <div class="form-check text-start my-3">
-        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault">
-          Remember me
-        </label>
-      </div>
-      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2023</p>
-    </form>
-  </main>
+        <div class="form-floating mb-3">
+          <input type="email" class="form-control shadow bg-body rounded " id="floatingInput" placeholder="name@example.com" style="margin: 10px 0px 10px 0px">
+          <label for="floatingInput">Email address</label>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control shadow  bg-body rounded" id="floatingPassword" placeholder="Password">
+          <label for="floatingPassword">Password</label>
+        </div>
 
-</div>
+        <div class="form-check text-start my-3">
+          <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
+            Remember me
+          </label>
+        </div>
+        <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Password o username dimenticata?</a></p>
+
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-left: 120px">
+          Sign up
+        </button>
+        <app-register></app-register>
+        <button class="btn btn-danger w-80 " style="margin-left: 15px" type="submit" routerLink="/post">Sign in</button>
+
+      </form>
+    </main>
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+
