--- a/src/app/post/post-details/post-details.component.html
+++ b/src/app/post/post-details/post-details.component.html
@@ -1,1 +1,3 @@
-<p>post-details works!</p>
+ <div class="card card-body">
+  Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+</div>
