--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -30,9 +30,9 @@
       <button type="button" class="btn btn-light mx-2">
         <i class="bi bi-chat"></i>
       </button>
-      <button type="button" class="btn btn-light mx-2" >
+      <a type="button" class="btn btn-light mx-2" href="http://localhost:4200/" >
         <i class="bi bi-box-arrow-right"></i>
-      </button>
+      </a>
     </div>
   </div>
 </nav>
