Migliorie grafiche + loadChildren

--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -8,7 +8,7 @@
     <div class="overflow-auto w-100 mt-3">
       <ul class="list-group mt-3 border-secondary list-group-item-success">
       <ng-container *ngFor="let friend of friends" >
-          <li class="list-group-item">
+          <li class="list-group-item border border-2 border-success-subtle shadow-sm rounded m-2">
           <h5 class="mb-1">Cognome nome</h5>
             <small>Information</small>
             <div class=" w-25 h-25" style="margin-left: 250px">
