--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -22,10 +22,16 @@
 
         </li>
       </ul>
-
-      <button type="button" class="btn btn-light mx-2">
-        <i class="bi bi-bell"></i>
-      </button>
+      <div class="dropdown">
+        <button class="btn btn-light mx-2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="bi bi-bell"></i>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">....</a></li>
+          <li><a class="dropdown-item" href="#">....</a></li>
+          <li><a class="dropdown-item" href="#">...</a></li>
+        </ul>
+      </div>
       <button type="button" class="btn btn-light mx-2">
         <i class="bi bi-chat"></i>
       </button>
