--- a/src/app/home/pagina-principale/pagina-principale.component.html
+++ b/src/app/home/pagina-principale/pagina-principale.component.html
@@ -1,15 +1,19 @@
 <app-nav></app-nav>
 <div class="container-fluid  text-center h-100">
-  <div class="row h-100">
-    <div class="col border-end border-danger-subtle mx-3">
+  <div class="row">
+    <div class="col border-end border-danger-subtle">
       <app-utente> </app-utente>
     </div>
-    <div class="col-6 p-4 ">
+    <div class="col-6 ">
+      <div class="container p-4">
       <app-create-new-post></app-create-new-post>
       <app-post-list></app-post-list>
+      </div>
     </div>
-    <div class="col mx-3 border-start  border-danger-subtle">
-      <app-friends-list></app-friends-list>
+    <div class="col border-start  border-danger-subtle">
+      <div class="container mx-3">
+        <app-friends-list></app-friends-list>
+      </div>
     </div>
   </div>
 </div>
