aggiunta di crea new comment e modifiche ai collapse all comments e create new comment

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,7 +27,7 @@
           Sign up
         </button>
         <app-register></app-register>
-        <button class="btn btn-danger w-80 " style="margin-left: 15px" type="button" routerLink="/home">Sign in</button>
+        <button class="btn btn-danger w-80 " style="margin-left: 15px" type="submit" [routerLink]="'home'">Sign in</button>
 
       </form>
     </main>
