--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,11 +2,11 @@
   <div  class="d-flex align-items-center py-4 h-100 ">
     <main class="form-signin w-100 m-auto">
       <form>
-         <img class="img-thumbnail border border-danger" src="https://yt3.googleusercontent.com/ytc/AGIKgqNaBgEYQ4BbXbiLexvFHncZYVVGMl8aTMSW13ZD=s176-c-k-c0x00ffffff-no-rj" alt="" width="60" height="60" style="margin-left: 120px">
+         <img class="img-thumbnail border border-danger" src="assets/image/logo.png" alt="" width="60" height="60" style="margin-left: 120px">
         <h1 class="display-6">Welcome</h1>
 
         <div class="form-floating mb-3">
-          <input type="email" class="form-control shadow bg-body rounded " id="floatingInput" placeholder="name@example.com" style="margin: 10px 0px 10px 0px">
+          <input type="text" class="form-control shadow bg-body rounded " id="floatingInput" placeholder="name@example.com" style="margin: 10px 0px 10px 0px">
           <label for="floatingInput">Email address</label>
         </div>
         <div class="form-floating">
