--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg E82139" style="background-color: var(--primary-2);">
   <div class="container-fluid">
-    <img class="img-thumbnail" src="https://yt3.googleusercontent.com/ytc/AGIKgqNaBgEYQ4BbXbiLexvFHncZYVVGMl8aTMSW13ZD=s176-c-k-c0x00ffffff-no-rj" alt="" width="60" height="60" >
+    <img class="img-thumbnail" src="assets/image/logo.png" alt="" width="60" height="60" >
     <a class="navbar-brand fst-italic text-light fs-3"  style="margin-left: 20px">SaverNike Network</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
