--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,16 +1,16 @@
 
   <div  class="d-flex align-items-center py-4 h-100 ">
     <main class="form-signin w-100 m-auto">
-      <form>
+      <form [formGroup]="loginform">
          <img class="img-thumbnail border border-danger" src="assets/image/logo.png" alt="" width="60" height="60" style="margin-left: 120px">
         <h1 class="display-6">Welcome</h1>
 
         <div class="form-floating mb-3">
-          <input type="text" class="form-control shadow bg-body rounded " id="floatingInput" placeholder="name@example.com" style="margin: 10px 0px 10px 0px">
-          <label for="floatingInput">Email address</label>
+          <input type="text" class="form-control shadow bg-body rounded " id="floatingInput" placeholder="name@example.com" style="margin: 10px 0px 10px 0px" formControlName="username">
+          <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control shadow  bg-body rounded" id="floatingPassword" placeholder="Password">
+          <input type="password" class="form-control shadow  bg-body rounded" id="floatingPassword" formControlName="password" placeholder="Password">
           <label for="floatingPassword">Password</label>
         </div>
 
