--- a/src/app/home/pagina-principale/pagina-principale.component.html
+++ b/src/app/home/pagina-principale/pagina-principale.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-6 ">
       <div class="container p-4">
-      <app-create-new-post></app-create-new-post>
+      <app-nav-post></app-nav-post>
       <app-post-list></app-post-list>
       </div>
     </div>
