--- a/src/app/home/post/create-new-post/create-new-post.component.html
+++ b/src/app/home/post/create-new-post/create-new-post.component.html
@@ -1,15 +1,22 @@
 
-<nav class="navbar bg-body-tertiary border border-secondary-subtle mb-4  rounded" style="background-color: #f5f5f5">
-  <div class="container-fluid">
-    <div class="fs-4 m-2">
-      <button class="btn btn-outline-primary mb-1">
-        <i class="bi bi-plus-circle" ></i>
-      </button>
-      Create a new post
+<div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 fw-bold" id="exampleModalLabel">Create a new post</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" [formGroup]="createNewPost">
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Descrizione</label>
+          <br>
+          <textarea type="text" class="form-control" id="exampleFormControlTextarea1" rows="3" formControlName="descrizione"></textarea>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" (click)="create()">Save post</button>
+      </div>
     </div>
-    <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search post" aria-label="Search">
-      <button class="btn btn-outline-primary" type="submit">Search</button>
-    </form>
   </div>
-</nav>
+</div>
