--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,64 +1,50 @@
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog" >
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Sign up</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form class="row g-3 needs-validation" novalidate>
+        <form class="row g-3 needs-validation" [formGroup]="registerform" novalidate>
           <div class="col-md-4">
-            <label for="validationCustom01" class="form-label">Name</label>
-            <input type="text" class="form-control" id="validationCustom01" required>
-            <div class="invalid-feedback">
-              Please choose a name.
-            </div>
+            <label for="validationCustom01" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="validationCustom01" formControlName="firstname">
           </div>
           <div class="col-md-4">
-            <label for="validationCustomUsername" class="form-label">Username</label>
-            <input type="text" class="form-control" id="validationCustomUsername" required>
-            <div class="invalid-feedback">
-             Please choose a username.
-            </div>
+            <label for="validationCustom02" class="form-label">Last name</label>
+            <input type="text" class="form-control" id="validationCustom02" formControlName="lastname">
           </div>
           <div class="col-md-4">
-            <label for="validationCustom02"  class="form-label">Email</label>
+            <label for="validationCustomUsername"  class="form-label">Username</label>
             <div class="input-group has-validation">
-              <input type="email" class="form-control" id="validationCustom02" aria-describedby="inputGroupPrepend" required>
-              <div class="invalid-feedback">
-                Please choose a email.
-              </div>
+              <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" formControlName="username">
             </div>
           </div>
           <div class="col-md-6">
             <label for="validationCustom03" class="form-label">City</label>
-            <input type="text" class="form-control" id="validationCustom03" required>
-            <div class="invalid-feedback">
-              Please provide a valid city.
-            </div>
+            <input type="text" class="form-control" id="validationCustom03" formControlName="city">
           </div>
           <div class="col-md-3">
             <label for="validationCustom04" class="form-label">State</label>
-            <select class="form-select" id="validationCustom04" required>
+            <select class="form-select" id="validationCustom04" formControlName="state">
               <option selected disabled value="">...</option>
               <option>Italy</option>
               <option>Türkiye</option>
             </select>
-            <div class="invalid-feedback">
-              Please select a valid state.
-            </div>
+
           </div>
           <div class="col-md-3">
               <label class="form-label">Genere</label>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+              <input class="form-check-input" type="radio" name="genre" id="exampleRadios1" value="m" formControlName="genre" checked>
               <label class="form-check-label" for="exampleRadios1">
                 M
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+              <input class="form-check-input" type="radio" name="genre" id="exampleRadios2" formControlName="genre" value="f">
               <label class="form-check-label" for="exampleRadios2">
                F
               </label>
@@ -66,21 +52,15 @@
           </div>
           <div class="col-md-3">
           <label for="validationCustom05" class="form-label">Date of birth</label>
-          <input type="date" class="form-control" id="validationCustom05" style="width: 150px"  required >
-          <div class="invalid-feedback">
-            Please provide a valid date of birth.
-          </div>
+          <input type="date" class="form-control" id="validationCustom05" style="width: 150px"  formControlName="dataOfBirth" >
             </div>
           <div class="col-md-6" style="margin-left: 50px">
             <label for="validationCustom03" class="form-label">Password</label>
-            <input type="password" class="form-control" id="validationCustom06" required>
-            <div class="invalid-feedback">
-              Please provide a valid password
-            </div>
+            <input type="password" class="form-control" id="validationCustom06"  formControlName="password">
           </div>
 
           <div class="col-12">
-              <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+              <input class="form-check-input" type="checkbox" value="" id="invalidCheck"  formControlName="conditions">
               <label class="form-check-label" for="invalidCheck">
                 Agree to terms and conditions
               </label>
