fatto chiamata create new comment e ho preso tutti i post

--- a/src/app/home/profile/utente/utente.component.html
+++ b/src/app/home/profile/utente/utente.component.html
@@ -4,7 +4,7 @@
        class=" img-thumbnail rounded-circle mt-4 w-25" alt="..." >
 
   <p class=" text-capitalize text-primary ">
-    cognome nome
+    nome cognome
   </p>
 
   <div class="dropdown">
@@ -16,12 +16,8 @@
       <li><a class="dropdown-item" type="button" href="https://www.minecraft.net/it-it" target="_blank">Minecraft</a></li>
       <li><a class="dropdown-item" type="button" href="https://www.rockstargames.com/it/gta-online" target="_blank">GTA 5</a></li>
     </ul>
+
   </div>
-
-
-
-
-
 </div>
 
 
