aggiuto username dinamico nella pagina principale

--- a/src/app/home/profile/utente/utente.component.html
+++ b/src/app/home/profile/utente/utente.component.html
@@ -4,8 +4,9 @@
        class=" img-thumbnail rounded-circle mt-4 w-25" alt="..." >
 
   <p class=" text-capitalize text-primary ">
-    nome cognome
+       {{localStorage.getItem("username")}}
   </p>
+
 
   <div class="dropdown">
     <button class="btn btn-primary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-right: 200px">
