--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -35,7 +35,7 @@
       <button type="button" class="btn btn-light mx-2">
         <i class="bi bi-chat"></i>
       </button>
-      <a type="button" class="btn btn-light mx-2" href="http://localhost:4200/" >
+      <a type="button" class="btn btn-light mx-2" (click)="logout()" href="http://localhost:4200/" >
         <i class="bi bi-box-arrow-right"></i>
       </a>
     </div>
