AGGIUNTA METTODO CLICC LIKE

--- a/src/app/home/post/post-list/post-list.component.html
+++ b/src/app/home/post/post-list/post-list.component.html
@@ -29,9 +29,9 @@
             <p class="text-center bg-primary-subtle text-dark rounded-pill border border-primary"> {{post.text}} </p>
             <ul class="nav nav-pills  mb-4">
               <li class="nav-item">
-                <button  type="button" id="buttonLike" class="btn btn btn-outline-primary mx-2" >
+                <button  type="button" id="buttonLike" class="btn btn btn-outline-primary mx-2" [ngClass]="post.likes.length==0 ? 'btn-outline-primary' : 'active'"  (click)="clickLike(post.id, post.likes)" >
                   <i class="bi bi-hand-thumbs-up "> </i>
-
+                  like
                   </button>
               </li>
               <p>
