--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -1,15 +1,20 @@
-
+<ng-container *ngIf="loading==true; else elseBlock1">
+  <div class="spinner-border mt-2" role="status">
+  </div>
+</ng-container>
+<ng-template #elseBlock1>
 <nav class="navbar bg-body-tertiary mt-3">
   <div class="container-fluid">
     <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search friends" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search </button>
     </form>
+
     <div class="overflow-auto w-100 mt-3">
       <ul class="list-group mt-3 border-secondary list-group-item-success">
       <ng-container *ngFor="let friend of friends" >
           <li class="list-group-item border border-2 border-success-subtle shadow-sm rounded m-2">
-          <h5 class="mb-1">Cognome nome</h5>
+          <h5 class="mb-1">{{friend.username}}</h5>
             <small>Information</small>
             <div class=" w-25 h-25" style="margin-left: 250px">
               <button class="btn btn-outline-success">
@@ -24,3 +29,4 @@
       </div>
     </div>
 </nav>
+</ng-template>
