--- a/src/app/home/post/create-new-post/create-new-post.component.html
+++ b/src/app/home/post/create-new-post/create-new-post.component.html
@@ -13,7 +13,7 @@
           <textarea type="text" class="form-control" id="exampleFormControlTextarea1" rows="3" formControlName="descrizione"></textarea>
         </div>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" id="exampleModal4">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-danger" (click)="create()">Save post</button>
       </div>
