--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -16,18 +16,15 @@
             <a type="button" class="btn btn-light mx-2" href="https://www.youtube.com/@savernike" target="_blank">
               <i class="bi bi-youtube"></i>
             </a>
-
           </div>
-
-
         </li>
       </ul>
       <div class="dropdown">
-        <button class="btn btn-light mx-2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <button type="button"class="btn btn-light mx-2 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="bi bi-bell"></i>
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">....</a></li>
+          <li><a class="dropdown-item" href="#">.....</a></li>
           <li><a class="dropdown-item" href="#">....</a></li>
           <li><a class="dropdown-item" href="#">...</a></li>
         </ul>
