--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,39 +1,50 @@
+<div class="d-flex align-items-center py-4 h-100 ">
+  <main class="form-signin w-100 m-auto">
+    <form [formGroup]="loginform">
+      <img class="img-thumbnail border border-danger" src="assets/image/logo.png" alt="" width="60" height="60"
+           style="margin-left: 120px">
+      <h1 class="display-6">Welcome</h1>
 
-  <div  class="d-flex align-items-center py-4 h-100 ">
-    <main class="form-signin w-100 m-auto">
-      <form [formGroup]="loginform">
-         <img class="img-thumbnail border border-danger" src="assets/image/logo.png" alt="" width="60" height="60" style="margin-left: 120px">
-        <h1 class="display-6">Welcome</h1>
-
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control shadow bg-body rounded " id="floatingInput" placeholder="name@example.com" style="margin: 10px 0px 10px 0px" formControlName="username">
-          <label for="floatingInput">Username</label>
-        </div>
-        <div class="form-floating">
-          <input type="password" class="form-control shadow  bg-body rounded" id="floatingPassword" formControlName="password" placeholder="Password">
-          <label for="floatingPassword">Password</label>
-        </div>
-
-        <div class="form-check text-start my-3">
-          <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
-            Remember me
-          </label>
-        </div>
-        <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Password o username dimenticata?</a></p>
-
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-left: 120px">
-          Sign up
+      <div class="form-floating input-group">
+        <input type="text" class="form-control shadow bg-body rounded " id="floatingInput"
+               placeholder="name@example.com" style="margin: 10px 0px 10px 0px" formControlName="username">
+        <label class="mt-2" for="floatingInput">Username</label>
+      </div>
+      <div class="form-floating input-group">
+        <input type="password" class="form-control shadow bg-body rounded " id="floatingPassword"
+               formControlName="password" placeholder="Password">
+        <label for="floatingInput">Password</label>
+        <div class="input-group-append">
+        <button class="input-group-text bg-white" style=" height: 59px">
+            <i id="eye"  class="bi bi-eye-fill" (click)="showPasssword()"></i>
         </button>
-        <app-register></app-register>
-        <button class="btn btn-danger w-80 " (click)="login()" style="margin-left: 15px" type="submit">Sign in</button>
-
-      </form>
-    </main>
+        </div>
 
 
-  </div>
+      </div>
+
+      <div class="form-check text-start my-3">
+        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Remember me
+        </label>
+      </div>
+      <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Password
+        o username dimenticata?</a></p>
+
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal"
+              style="margin-left: 120px">
+        Sign up
+      </button>
+      <app-register></app-register>
+      <button class="btn btn-danger w-80 " (click)="login()" style="margin-left: 15px" type="submit">Sign in</button>
+
+    </form>
+  </main>
+
+
+</div>
 
 
 
