Sistemato il controllo in caso mettesserò username o password sbagliati

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,4 @@
+
 <div class="d-flex align-items-center py-4 h-100 ">
   <main class="form-signin w-100 m-auto" id="inizio">
     <form [formGroup]="loginform" id='form'>
@@ -6,21 +7,35 @@
       <h1 class="display-6">Welcome</h1>
 
       <div class="form-floating input-group">
-        <input type="text" class="form-control shadow bg-body rounded " id="floatingInput"
+
+        <input type="text" class="form-control shadow bg-body rounded " [ngClass]="username?.invalid && alert ? 'is-invalid': '' " id="floatingInput"
                placeholder="name@example.com" style="margin: 10px 0px 10px 0px" formControlName="username">
         <label class="mt-2" for="floatingInput">Username</label>
+        <div *ngIf="username?.invalid && alert"
+             class="invalid-feedback mb-1">
+
+          <div *ngIf="username?.errors?.['required']" >
+            Username is required or wrong username
+          </div>
+        </div>
       </div>
       <div class="form-floating input-group">
-        <input type="password" class="form-control shadow bg-body rounded " id="floatingPassword"
+        <input type="password" class="form-control shadow bg-body rounded " [ngClass]="password?.invalid && alert ? 'is-invalid': '' " id="floatingPassword"
                formControlName="password" placeholder="Password">
-        <label for="floatingInput">Password</label>
+        <label for="floatingPassword">Password</label>
         <div class="input-group-append">
         <button class="input-group-text bg-white" style=" height: 59px">
             <i id="eye"  class="bi bi-eye-fill" (click)="showPasssword()"></i>
         </button>
         </div>
+        <div *ngIf="password?.invalid && alert"
+        class="invalid-feedback">
 
+          <div *ngIf="password?.errors?.['required']">
+            Password is required or wrong password.
+          </div>
 
+        </div>
       </div>
 
       <div class="form-check text-start my-3">
