--- a/src/app/home/post/create-new-comment/create-new-comment.component.html
+++ b/src/app/home/post/create-new-comment/create-new-comment.component.html
@@ -7,7 +7,7 @@
                  aria-describedby="inputGroup-sizing-default" formControlName="commento">
         </div>
       <div class="container" style="margin-left: 300px">
-        <button type="button" class="btn btn-outline-primary ms-4" (click)="createComment()">Save comment</button>
+        <button id="buttonSaveComment" type="button" class="btn btn-outline-primary ms-4" (click)="createComment()">Save comment</button>
       </div>
 
 
