--- a/src/app/home/post/create-new-post/create-new-post.component.html
+++ b/src/app/home/post/create-new-post/create-new-post.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="modal-footer" id="exampleModal4">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-danger" (click)="create()">Save post</button>
+        <button id="buttonSave" type="button" class="btn btn-danger" (click)="create()">Save post</button>
       </div>
     </div>
   </div>
