--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -73,7 +73,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button (click)="register()" type="button" class="btn btn-btn btn-danger w-80">Sign up</button>
+        <button id="buttonSignUp" (click)="register()" type="button" class="btn btn-btn btn-danger w-80">Sign up</button>
       </div>
     </div>
   </div>
