--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -1,3 +1,5 @@
+
+
 <ng-container *ngIf="loading==true; else elseBlock1">
   <div class="spinner-border mt-2" role="status">
   </div>
@@ -12,6 +14,12 @@
 
     <div class="overflow-auto w-100 mt-3">
       <ul class="list-group mt-3 border-secondary list-group-item-success">
+        <div *ngIf="errore" class="alert alert-danger d-flex align-items-center" role="alert">
+          <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
+          <div>
+            Error Sistem
+          </div>
+        </div>
         <ng-container *ngIf="friends.length!=0;else elseBlock2">
       <ng-container *ngFor="let friend of friends" >
           <li class="list-group-item border border-2 border-success-subtle shadow-sm rounded m-2">
@@ -31,6 +39,7 @@
       </div>
     </div>
 </nav>
+
   <ng-template #elseBlock2>
   <p>
     Non ci sono nuovi amici
