--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -8,7 +8,7 @@
 <nav class="navbar bg-body-tertiary mt-3">
   <div class="container-fluid">
     <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search friends" aria-label="Search">
+      <input class="form-control me-2" type="search" placeholder="Search friends" aria-label="Search"  formControlName="search">
       <button class="btn btn-outline-success" type="submit">Search </button>
     </form>
 
