sistemata graficamente pagina 403

--- a/src/app/error/error403/error403.component.html
+++ b/src/app/error/error403/error403.component.html
@@ -1,1 +1,7 @@
-<p>error403</p>
+
+<img class="position-absolute top-50 start-50 translate-middle border border-danger border-4" src="assets/image/605a704f106eb50019d053e0.png">
+<a type="button" class="btn btn-outline-danger" href="http://localhost:4200" style="margin-top: 723px; margin-left: 910px">
+  <i class="bi bi-house"></i>
+  Torna al login
+</a>
+
