--- a/src/app/home/pagina-principale/pagina-principale.component.html
+++ b/src/app/home/pagina-principale/pagina-principale.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
 <div class="container-fluid  text-center h-100">
   <div class="row">
-    <div class="col border-end border-danger-subtle">
+    <div class="col-3  border-end border-danger-subtle">
       <app-utente> </app-utente>
     </div>
     <div class="col-6 ">
@@ -10,7 +10,7 @@
       <app-post-list></app-post-list>
       </div>
     </div>
-    <div class="col border-start  border-danger-subtle">
+    <div class="col-3  border-start  border-danger-subtle">
       <div class="container mx-3">
         <app-friends-list></app-friends-list>
       </div>
