sistemato tutti i bottoni con il login

--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -9,7 +9,7 @@
   <div class="container-fluid">
     <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search friends" aria-label="Search"  formControlName="search">
-      <button class="btn btn-outline-success" type="submit">Search </button>
+      <button class="btn btn-outline-success"  >Search </button>
     </form>
 
     <div class="overflow-auto w-100 mt-3">
