--- a/src/app/home/friends/friends-list/friends-list.component.html
+++ b/src/app/home/friends/friends-list/friends-list.component.html
@@ -1,50 +1,40 @@
-
-
 <ng-container *ngIf="loading==true; else elseBlock1">
   <div class="spinner-border mt-2" role="status">
   </div>
 </ng-container>
 <ng-template #elseBlock1>
-<nav class="navbar bg-body-tertiary mt-3">
-  <div class="container-fluid">
-    <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search friends" aria-label="Search"  formControlName="search">
-      <button class="btn btn-outline-success"  >Search </button>
-    </form>
+  <nav class="navbar bg-body-tertiary mt-3">
+    <div class="container-fluid">
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search friends" aria-label="Search"
+               formControlName="search">
+        <button class="btn btn-outline-success">Search</button>
+      </form>
 
-    <div class="overflow-auto w-100 mt-3">
-      <ul class="list-group mt-3 border-secondary list-group-item-success">
-        <div *ngIf="errore" class="alert alert-danger d-flex align-items-center" role="alert">
-          <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
-          <div>
-            Error Sistem
-          </div>
-        </div>
-        <ng-container *ngIf="friends.length!=0;else elseBlock2">
-      <ng-container *ngFor="let friend of friends" >
-
-          <li class="list-group-item border border-2 border-success-subtle shadow-sm rounded m-2">
-            <h5 class="mb-1">{{friend.username}}</h5>
-            <small>Information</small>
-            <div class=" w-25 h-25" style="margin-left: 250px">
-              <button class="btn btn-outline-success">
-                <i class="bi bi-person-add"></i>
-              </button>
-
+      <div class="overflow-auto w-100 mt-3">
+        <ul class="list-group mt-3 border-secondary list-group-item-success">
+          <div *ngIf="errore" class="alert alert-danger d-flex align-items-center" role="alert">
+            <i class="bi flex-shrink-0 me-2 bi-exclamation-triangle-fill"></i>
+            <div>
+              Error Sistem
             </div>
-          </li>
+          </div>
+          <ng-container *ngIf="friends.length!=0;else elseBlock2">
+            <ng-container *ngFor="let friend of friends">
 
-        </ng-container>
-        </ng-container>
-      </ul>
+              <app-friend [friend]="friend"></app-friend>
+
+            </ng-container>
+          </ng-container>
+        </ul>
 
       </div>
     </div>
-</nav>
+  </nav>
 
   <ng-template #elseBlock2>
-  <p>
-    Non ci sono nuovi amici
-  </p>
+    <p>
+      Non ci sono nuovi amici
+    </p>
   </ng-template>
 </ng-template>
