--- a/src/app/home/post/nav-post/nav-post.component.html
+++ b/src/app/home/post/nav-post/nav-post.component.html
@@ -9,7 +9,7 @@
     </div>
     <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search post" aria-label="Search">
-      <button class="btn btn-outline-primary" type="submit">Search</button>
+      <button class="btn btn-outline-primary" type="button">Search</button>
     </form>
   </div>
 </nav>
